Added Get Mapping and header functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database=mysql
+
+# we use this property to print the exception in postman output when there are any failures
+server.error.include-message = always
