--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,17 @@ spring.jpa.database=mysql
 
 # we use this property to print the exception in postman output when there are any failures
 server.error.include-message = always
+
+#this property is to enable all the features of the actuator endpoints
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+management.endpoint.health.show-details=always
+
+
+
+
+#actuator info endpoint details
+
+info.app.name= Spring Boot Restful Web Services
+info.app.description= This application demonstrates the basic understandings of Spring Boot
+info.app.version=1.0.0
